--- a/app/src/main/res/layout/fragment_breaking_news.xml
+++ b/app/src/main/res/layout/fragment_breaking_news.xml
@@ -17,6 +17,8 @@
             android:id="@+id/rvBreakingNews"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:paddingBottom="50dp"
+            android:clipToPadding="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
