--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/breakingNewsFragment"
-        android:title="Breaking News"/>
+    <item
+        android:id="@+id/breakingNewsFragment"
+        android:icon="@drawable/newspaper"
+        android:title="Breaking News" />
 
-    <item android:id="@+id/savedNewsFragment"
-        android:title="Saved News"/>
+    <item
+        android:id="@+id/savedNewsFragment"
+        android:icon="@drawable/ic_favorite"
+        android:title="Saved News" />
 
-<item android:id="@+id/searchNewsFragment"
-        android:title="Search News"/>
-
+    <item
+        android:id="@+id/searchNewsFragment"
+        android:icon="@drawable/ic_search"
+        android:title="Search News" />
 
 
 </menu>
